# ts-app-expenses

./: .gitignore  README.md  pyproject.toml
src/ts/expense_manager/: expense_manager.py  main.py
src/ts/expense_manager/resources/: expense_dialog.ui  expense_manager_main.ui
src/ts/expense_manager/ui/: expense_manager_main.py
